[tool.poetry]
name = "ratelimit"
version = "0.1.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
